--- a/sass/demoCssFolder/demo.css
+++ b/sass/demoCssFolder/demo.css
@@ -3,8 +3,125 @@
 */
 body { font-family: Helvetica, sans-serif; color: #333; }
 
+.text_center { text-align: center; }
+
 .sass_features { color: #333; width: 100%; text-align: left; }
-.sass_features li { color: #ccc; }
+.sass_features li { color: #ccc; margin: 0px 0px 10px; }
 .sass_features .key_point { font-weight: bolder; color: #5fdfe8; }
+
+html, body, ul { margin: 0px; padding: 0px; }
+
+.m0 { margin: 0; }
+
+.ml1 { margin-left: 1px; }
+
+.ml2 { margin-left: 2px; }
+
+.ml5 { margin-left: 5px; }
+
+.ml10 { margin-left: 10px; }
+
+.ml20 { margin-left: 20px; }
+
+.mr1 { margin-right: 1; }
+
+.mr2 { margin-right: 2px; }
+
+.mr5 { margin-right: 5px; }
+
+.mr10 { margin-right: 10px; }
+
+.mr20 { margin-right: 20px; }
+
+.mt1 { margin-top: 1; }
+
+.mt2 { margin-top: 2px; }
+
+.mt5 { margin-top: 5px; }
+
+.mt10 { margin-top: 10px; }
+
+.mt20 { margin-top: 20px; }
+
+.mb1 { margin-bottom: 1px; }
+
+.mb2 { margin-bottom: 2px; }
+
+.mb5 { margin-bottom: 5px; }
+
+.mb10 { margin-bottom: 10px; }
+
+.mb20 { margin-bottom: 20px; }
+
+.ml-1 { margin-left: -1px; }
+
+.mt-1 { margin-top: -1px; }
+
+.p1 { padding: 1px; }
+
+.pl1 { padding-left: 1px; }
+
+.pt1 { padding-top: 1px; }
+
+.pr1 { padding-right: 1px; }
+
+.pb1 { padding-bottom: 1px; }
+
+.p2 { padding: 2px; }
+
+.pl2 { padding-left: 2px; }
+
+.pt2 { padding-top: 2px; }
+
+.pr2 { padding-right: 2px; }
+
+.pb2 { padding-bottom: 2px; }
+
+.pl5 { padding-left: 5px; }
+
+.p5 { padding: 5px; }
+
+.pt5 { padding-top: 5px; }
+
+.pr5 { padding-right: 5px; }
+
+.pb5 { padding-bottom: 5px; }
+
+.p10 { padding: 10px; }
+
+.pl10 { padding-left: 10px; }
+
+.pt10 { padding-top: 10px; }
+
+.pr10 { padding-right: 10px; }
+
+.pb10 { padding-bottom: 10px; }
+
+.p20 { padding: 20px; }
+
+.pl20 { padding-left: 20px; }
+
+.pt20 { padding-top: 20px; }
+
+.pr20 { padding-right: 20px; }
+
+.pb20 { padding-bottom: 20px; }
+
+.border_box { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+
+.box_block { margin-bottom: 10px; width: 200px; height: 200px; padding: 2px; border: 1px solid #5fdfe8; background-color: #ccc; }
+
+.message, .success, .error, .warning { border: 1px solid #ccc; padding: 10px; color: #333; margin-bottom: 5px; width: 300px; }
+
+.success { border-color: green; }
+
+.error { border-color: red; }
+
+.warning { border-color: yellow; }
+
+.article { float: left; width: 31.25%; }
+
+a.xq_link { text-decoration: none; color: #08c; }
+a.xq_link:hover { color: #006699; }
 
 /*# sourceMappingURL=demo.css.map */
