--- a/sass/gulp-sass/scss/index.scss
+++ b/sass/gulp-sass/scss/index.scss
@@ -1,25 +1,29 @@
 /* 首页样式 */
-.ps_demo_wrap{ position: relative; width:300px; height:80px; }
-.ps_demo_wrap .demo_icon{ 
+@import "mySprite";
+.ps_demo_wrap{
 	position: relative;
-	float:left; 
-	margin:13px 0px 0px 10px; 
-	background-image:url(../images/PS_demo.png); 
-	width:54px; 
-	height:54px; 
-	cursor: pointer; 
+	width:300px;
+	height:80px;
+	background:rgba(0,0,0,.3);
 }
-.ps_demo_wrap .weibo_icon{ background-position: 0px 0px; }
-.ps_demo_wrap .qq_icon{ background-position: -60px 0px; }
-.ps_demo_wrap .douban_icon{ background-position: -120px 0px; }
-.ps_demo_wrap .renren_icon{ background-position: -180px 0px; }
-.ps_demo_wrap .demo_icon .black_bg{ 
-	position:absolute; 
-	top:0px; 
-	left:0px; 
-	z-index:2; 
-	width: 54px; 
-	height:54px; 
+.ps_demo_wrap .demo_icon{
+	position: relative;
+	float:left;
+	margin:13px 0px 0px 10px;
+	cursor: pointer;
+}
+.ps_demo_wrap .weibo_icon{ @include sprite($icon-weibo); }
+.ps_demo_wrap .qq_icon{ @include sprite($icon-qq); }
+.ps_demo_wrap .douban_icon{ @include sprite($icon-douban); }
+.ps_demo_wrap .renren_icon{ @include sprite($icon-renren); }
+
+.ps_demo_wrap .demo_icon .black_bg{
+	position:absolute;
+	top:0px;
+	left:0px;
+	z-index:2;
+	width: 54px;
+	height:54px;
 	border-radius:50%;
 	background-color:rgba(0,0,0,.5);
 	cursor: pointer;
